# fmf-jinja

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  qodana.yaml
.distro/: fmf-jinja.spec
.github/workflows/: ci.yaml  release.yaml  step_build-wheel.yaml  step_code-analysis.yaml  step_code-analysis.yml  step_docs.yaml  step_pre-commit.yaml  step_test.yaml
docs/: conf.py  index.md
docs/example/: index.md  simple.md  symlink.md
example/simple/: main.fmf
example/simple/template/: file.yaml.j2  link_orig.yaml  some_file.yaml
src/fmf_jinja/: __init__.py  __main__.py  generators.py  template.py  utils.py
src/fmf_jinja/cli/: __init__.py  main.py  utils.py
src/fmf_jinja/fmf/: __init__.py  tree.py
test/: conftest.py
test/data/input/: minimal  recursive  simple
test/data/output/simple/rootA/: fileB.yaml
test/unit/: conftest.py  test_cli.py  test_template.py  utils.py
test/unit/data/input/trees/: simple  symlink
test/unit/data/output/trees/simple/rootA/: file.yaml
test/unit/data/output/trees/symlink/: main.fmf
test/unit/data/output/trees/symlink/rootB/: file.yaml  link_to_A.yaml
