[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'

[project]
name = 'fmf_jinja'
authors = [
    { name = 'Cristian Le', email = 'git@lecris.dev' },
]
maintainers = [
    { name = 'Cristian Le', email = 'git@lecris.dev' },
]
description = 'Jinja-style templater using fmf metadata'
readme = 'README.md'
license = 'GPL-3.0-or-later'
license-files = { paths = ['LICENSE.md'] }
requires-python = '>=3.9'
classifiers = [
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Utilities',
]
keywords = [
    'metadata',
    'template',
]
dependencies = [
    'fmf @ git+https://github.com/LecrisUT/fmf@fmf-jinja',
    'Jinja2',
    'click',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/psss/fmf'

[project.optional-dependencies]
test = [
    'pytest',
]
test-cov = [
    'fmf_jinja[test]',
    'pytest-cov',
]
dev = [
    'fmf_jinja[test]',
    'pre-commit',
]
docs = [
    'sphinx',
    'furo',
]

[project.scripts]
fmf-jinja = 'fmf_jinja.cli:main'

[tool.hatch]
version.source = 'vcs'
version.raw-options.version_scheme = 'post-release'
build.hooks.vcs.version-file = "src/fmf_jinja/_version.py"
metadata.allow-direct-references = true

[tool.pytest.ini_options]
testpaths = [
    'test',
]

[tool.mypy]
files = ["src", "test"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.9"
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["fmf_jinja.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
